testwallet/OTAPI_funcdef.h


int OT_API_Init(const char * szClientPath); 
int OT_API_LoadWallet(const char * szPath); 
int OT_API_GetServerCount(void);
int OT_API_GetAssetTypeCount(void);
int OT_API_GetAccountCount(void);
int OT_API_GetNymCount(void);
const char * OT_API_GetServer_ID(int nIndex); 
const char * OT_API_GetServer_Name(const char * SERVER_ID); 
const char * OT_API_GetAssetType_ID(int nIndex); 
const char * OT_API_GetAssetType_Name(const char * ASSET_TYPE_ID); 
const char * OT_API_GetAccountWallet_ID(int nIndex);	 
const char * OT_API_GetAccountWallet_Name(const char * ACCOUNT_ID);	 
const char * OT_API_GetAccountWallet_Balance(const char * ACCOUNT_ID);	 
const char * OT_API_GetAccountWallet_Type(const char * ACCOUNT_ID);	 
const char * OT_API_GetAccountWallet_AssetTypeID(const char * ACCOUNT_ID);	 
const char * OT_API_GetNym_ID(int nIndex); 
const char * OT_API_GetNym_Name(const char * NYM_ID); 
const char * OT_API_WriteCheque(const char * SERVER_ID,
								const char * CHEQUE_AMOUNT, 
								const char * VALID_FROM, 
								const char * VALID_TO,
								const char * SENDER_ACCT_ID,
								const char * SENDER_USER_ID,
								const char * CHEQUE_MEMO, 
								const char * RECIPIENT_USER_ID);
const char * OT_API_WritePaymentPlan(const char * SERVER_ID,
									 const char * VALID_FROM,	
									 const char * VALID_TO,		
									 const char * SENDER_ACCT_ID,	
									 const char * SENDER_USER_ID,	
									 const char * PLAN_CONSIDERATION,	
									 const char * RECIPIENT_ACCT_ID,	
									 const char * RECIPIENT_USER_ID,	
									 const char * INITIAL_PAYMENT_AMOUNT,	
									 const char * INITIAL_PAYMENT_DELAY,	
									 const char * PAYMENT_PLAN_AMOUNT,		
									 const char * PAYMENT_PLAN_DELAY,		
									 const char * PAYMENT_PLAN_PERIOD,		
									 const char * PAYMENT_PLAN_LENGTH,		
									 const char * PAYMENT_PLAN_MAX_PAYMENTS	
									 );
const char * OT_API_LoadUserPubkey(const char * USER_ID); 
const char * OT_API_LoadPubkey(const char * USER_ID); 
int OT_API_VerifyUserPrivateKey(const char * USER_ID); 
const char * OT_API_LoadPurse(const char * SERVER_ID,
							  const char * ASSET_TYPE_ID); 
const char * OT_API_LoadMint(const char * SERVER_ID,
							 const char * ASSET_TYPE_ID); 
const char * OT_API_LoadAssetContract(const char * ASSET_TYPE_ID); 
int OT_API_IsBasketCurrency(const char * ASSET_TYPE_ID); 
int OT_API_Basket_GetMemberCount(const char * BASKET_ASSET_TYPE_ID);
const char * OT_API_Basket_GetMemberType(const char * BASKET_ASSET_TYPE_ID,
										 const int nIndex);
const char * OT_API_Basket_GetMinimumTransferAmount(const char * BASKET_ASSET_TYPE_ID);
const char * OT_API_Basket_GetMemberMinimumTransferAmount(const char * BASKET_ASSET_TYPE_ID,
														  const int nIndex);
const char * OT_API_LoadAssetAccount(const char * SERVER_ID,
									 const char * USER_ID,
									 const char * ACCOUNT_ID); 
const char * OT_API_LoadInbox(const char * SERVER_ID,
							  const char * USER_ID,
							  const char * ACCOUNT_ID); 
const char * OT_API_LoadOutbox(const char * SERVER_ID,
							   const char * USER_ID,
							   const char * ACCOUNT_ID); 
int OT_API_Ledger_GetCount(const char * SERVER_ID,
						   const char * USER_ID,
						   const char * ACCOUNT_ID,
						   const char * THE_LEDGER); 
const char * OT_API_Ledger_CreateResponse(const char * SERVER_ID,
										  const char * USER_ID,
										  const char * ACCOUNT_ID,
										  const char * ORIGINAL_LEDGER);
const char * OT_API_Ledger_GetTransactionByIndex(const char * SERVER_ID,
												 const char * USER_ID,
												 const char * ACCOUNT_ID,
												 const char * THE_LEDGER,
												 int nIndex); 
const char * OT_API_Ledger_GetTransactionByID(const char * SERVER_ID,
											  const char * USER_ID,
											  const char * ACCOUNT_ID,
											  const char * THE_LEDGER,
											  const char * TRANSACTION_NUMBER); 
const char * OT_API_Ledger_GetTransactionIDByIndex(const char * SERVER_ID,
												   const char * USER_ID,
												   const char * ACCOUNT_ID,
												   const char * THE_LEDGER,
												   int nIndex); 
const char * OT_API_Ledger_AddTransaction(const char * SERVER_ID,
										  const char * USER_ID,
										  const char * ACCOUNT_ID,
										  const char * THE_LEDGER,
										  const char * THE_TRANSACTION);
const char * OT_API_Transaction_CreateResponse(const char * SERVER_ID,
											   const char * USER_ID,
											   const char * ACCOUNT_ID,
											   const char * RESPONSE_LEDGER, 
											   const char * ORIGINAL_TRANSACTION, 
											   int BOOL_DO_I_ACCEPT);   
const char * OT_API_Transaction_GetType(const char * SERVER_ID,
										const char * USER_ID,
										const char * ACCOUNT_ID,
										const char * THE_TRANSACTION);
int OT_API_Transaction_GetSuccess(const char * SERVER_ID,
								  const char * USER_ID,
								  const char * ACCOUNT_ID,
								  const char * THE_TRANSACTION);
const char * OT_API_Purse_GetTotalValue(const char * SERVER_ID,
										const char * ASSET_TYPE_ID,
										const char * THE_PURSE);
void OT_API_checkServerID(const char * SERVER_ID, const char * USER_ID);
void OT_API_createUserAccount(const char * SERVER_ID,
							  const char * USER_ID);
void OT_API_checkUser(const char * SERVER_ID,
					  const char * USER_ID,
					  const char * USER_ID_CHECK);
void OT_API_getRequest(const char * SERVER_ID,
					   const char * USER_ID);
void OT_API_getTransactionNumber(const char * SERVER_ID,
								 const char * USER_ID);
void OT_API_issueAssetType(const char *	SERVER_ID,
						   const char *	USER_ID,
						   const char *	THE_CONTRACT);
void OT_API_getContract(const char * SERVER_ID,
						const char * USER_ID,
						const char * ASSET_ID);
void OT_API_getMint(const char * SERVER_ID,
					const char * USER_ID,
					const char * ASSET_ID);
void OT_API_createAssetAccount(const char * SERVER_ID,
							   const char * USER_ID,
							   const char * ASSET_ID);
void OT_API_getAccount(const char * SERVER_ID,
					   const char * USER_ID,
					   const char * ACCT_ID);
const char * OT_API_GenerateBasketCreation(const char * USER_ID,
										   const char * MINIMUM_TRANSFER); 
const char * OT_API_AddBasketCreationItem(const char * USER_ID, 
										  const char * THE_BASKET, 
										  const char * ASSET_TYPE_ID, 
										  const char * MINIMUM_TRANSFER); 
void OT_API_issueBasket(const char * SERVER_ID,
						const char * USER_ID,
						const char * THE_BASKET);
const char * OT_API_GenerateBasketExchange(const char * SERVER_ID,
										   const char * USER_ID,
										   const char * BASKET_ASSET_TYPE_ID,
										   const char * BASKET_ASSET_ACCT_ID,
										   const int TRANSFER_MULTIPLE);
const char * OT_API_AddBasketExchangeItem(const char * SERVER_ID,
										  const char * USER_ID,
										  const char * THE_BASKET, 
										  const char * ASSET_TYPE_ID,
										  const char * ASSET_ACCT_ID);
void OT_API_exchangeBasket(const char * SERVER_ID,
						   const char * USER_ID,
						   const char * BASKET_ASSET_ID,
						   const char * THE_BASKET,
						   const int BOOL_EXCHANGE_IN_OR_OUT); 
void OT_API_notarizeWithdrawal(const char * SERVER_ID,
							   const char * USER_ID,
							   const char * ACCT_ID,
							   const char * AMOUNT);
void OT_API_notarizeDeposit(const char * SERVER_ID,
							const char * USER_ID,
							const char * ACCT_ID,
							const char * THE_PURSE);
void OT_API_notarizeTransfer(const char * SERVER_ID,
							 const char * USER_ID,
							 const char * ACCT_FROM,
							 const char * ACCT_TO,
							 const char * AMOUNT,
							 const char * NOTE);
void OT_API_getInbox(const char * SERVER_ID,
					 const char * USER_ID,
					 const char * ACCT_ID);
void OT_API_processInbox(const char * SERVER_ID,
						 const char * USER_ID,
						 const char * ACCT_ID,
						 const char * ACCT_LEDGER);
void OT_API_withdrawVoucher(const char * SERVER_ID,
							const char * USER_ID,
							const char * ACCT_ID,
							const char * RECIPIENT_USER_ID,
							const char * CHEQUE_MEMO,
							const char * AMOUNT);
void OT_API_depositCheque(const char * SERVER_ID,
						  const char * USER_ID,
						  const char * ACCT_ID,
						  const char * THE_CHEQUE);
void OT_API_depositPaymentPlan(const char * SERVER_ID,
							   const char * USER_ID,
							   const char * THE_PAYMENT_PLAN);
int OT_API_ConnectServer(const char * SERVER_ID, const char * USER_ID, 
						 const char * szCA_FILE, const char * szKEY_FILE, 
						 const char * szKEY_PASSWORD);
int OT_API_ProcessSockets(void);	